--- a/Excercise/05-Strings-Excercises.ipynb
+++ b/Excercise/05-Strings-Excercises.ipynb
@@ -147,6 +147,55 @@
     "\n",
     "print(\"There are \" + str(result) + \" words.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Palindrome (*)\n",
+    "A palindrome is a sequence of characters that is the same, when read forward as backwards (ignoring spaces). For example:\n",
+    "\n",
+    "- \"Anna\" is a palindrome\n",
+    "- \"Ni talar bra latin\"\n",
+    "- bjkjb\n",
+    "\n",
+    "\n",
+    "Let the user input a sequence of characters and check if it is a palindrome. (*)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nitalarbralatin\n",
+      " Är ett palindrom\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = input(\"skriv ett ord eller mening \")\n",
+    "user = user.lower() # Gör alla bokstäver från user inputen till små bokstäver så att den kan ignorerar ifall du skriver med stora bokstäver\n",
+    "user = user.replace(\" \", \"\") # Byter alla mellanrum med inte mellanrum\n",
+    "\n",
+    "if user == user[::-1]:\n",
+    "    print(f\"{user}\\n Är ett palindrom\")\n",
+    "else:\n",
+    "    print(\"Är inte en palindrom\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Vowels (**)\n",
+    "\n",
+    "Count the number of vowels in this sentence: \"Pure mathematics is, in its way, the poetry of logical ideas\""
+   ]
   }
  ],
  "metadata": {
