--- a/Excercise/05-Strings-Excercises.ipynb
+++ b/Excercise/05-Strings-Excercises.ipynb
@@ -196,6 +196,80 @@
     "\n",
     "Count the number of vowels in this sentence: \"Pure mathematics is, in its way, the poetry of logical ideas\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "# variabeln och stringen\n",
+    "\n",
+    "mening = \"Pure mathematics is, in its way, the poetry of logical ideas\"\n",
+    "\n",
+    "# Ta reda på bokstäver genom att returna och findall (bokstäverna) och blocket mening\n",
+    "bokstäver = len(re.findall(r\"[aAeEiIoOuUyYäÄöÖ]\", mening))\n",
+    "\n",
+    "print(f\"{bokstäver}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Det är 22 vokaler i meningen\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Använda sig utav en for for loop med if sats\n",
+    "\n",
+    "# ställer upp meningen\n",
+    "mening = \"Pure mathematics is, in its way, the poetry of logical ideas\"\n",
+    "# Lägger till en tom lista\n",
+    "bokstäver = []\n",
+    "# Lägger in alla vowels\n",
+    "vowels = \"aouåeiyäö\"\n",
+    "\n",
+    "# Loopar först igenom mening för att läsa av meningen\n",
+    "for bokstav in mening:\n",
+    "    # Loopar sedan igenom vowels\n",
+    "    for vowel in vowels:\n",
+    "        # Om bokstav är lika med vowel så adderas vi in en i listan \n",
+    "        if bokstav == vowel:\n",
+    "            bokstäver.append(bokstav)\n",
+    "  # Printar i en funktion. len() lämnar tillbaka bokstäverna i objektet          \n",
+    "print(f\"Det är {len(bokstäver)} vokaler i meningen\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " ## Encryption (**)\n",
+    "Let the user input a word and:\n",
+    "\n",
+    "  a)   encrypt the message by replacing each letter with the next letter. If the letter is in the end of the alphabet, use the first letter instead.\n",
+    "\n",
+    "e.g. in Swedish: \"höst\"  →  \"iatu\"\n",
+    "\n",
+    "  b)   decrypt the message\n",
+    "\n",
+    "  c)   let the user choose either encryption or decryption."
+   ]
   }
  ],
  "metadata": {
