--- a/Code-Along/L8-File-Handling.ipynb
+++ b/Code-Along/L8-File-Handling.ipynb
@@ -28,14 +28,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\n",
+      "\n",
+      "Time is a drug. Too       much of it kills you.  -  Terry Pratchett\n",
+      "\n",
+      "\n",
+      " An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\n",
+      "\n",
+      "   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \n",
+      "\n",
+      "\n",
+      "  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \n",
+      "\n",
+      "If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton\n"
+     ]
+    }
+   ],
    "source": [
-    "with open(\"../Data/quotes.txt\", \"r\") as f:\n",
+    "path = \"../Data/quotes.txt\"     ## Man kan spara pathen som en variablel. absolut lättare än att spara efter open på raden nedanför\n",
+    "\n",
+    "with open(path, \"r\") as f:   # Öppnar filen, väldigt bra att spara i sin lokala mapp också. \n",
     "    text = f.read()\n",
     "\n",
-    "text"
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleaning up quotes.txt\n",
+    "\n",
+    "- Vi vill snygga till filen lite. \n",
+    "\n",
+    "- inspect txt-file manually (some prankster has added random noise in form of whitespace and newlines)\n",
+    "- remove leading and trailing whitespaces \n",
+    "- remove excessive white spaces in between words\n",
+    "- add quote numbers "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  If     we     knew what it was      we were doing, it would not be called research,          would it?     - Albert Einstein\n",
+      "\n",
+      "Time is a drug. Too       much of it kills you.  -  Terry Pratchett\n",
+      "\n",
+      "\n",
+      " An expert is a person who       has made all the mistakes that           can be made in a          very narrow field - Niels Bohr\n",
+      "\n",
+      "   Everything must be made as simple as possible. But not simpler. - Albert Einstein     \n",
+      "\n",
+      "\n",
+      "  Nothing in life                is to be feared, it is only to be understood. Now is the time to understand more, so that we may fear less. - Marie  Curie  \n",
+      "\n",
+      "If I have seen further     it is by standing on the shoulders of Giants. - Isaac Newton"
+     ]
+    }
+   ],
+   "source": [
+    "# börjar med att läsa in filen\n",
+    "\n",
+    "with open(path, \"r\") as f_read, open(\"../Data/quotes_clean.txt\", \"w\") as f_write:  #r står för read # w så skapar man en ny fil(quotes_clean)\n",
+    "    # när man öppnar sparar man i f_read  \n",
+    "\n",
+    "    for quote in f_read:\n",
+    "        print(quote, end=\"\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
