03-for-statements-excercise

--- a/Excercise/03-for-statements-excericse.ipynb
+++ b/Excercise/03-for-statements-excericse.ipynb
@@ -406,12 +406,14 @@
    "source": [
     "## Rice on a chessboard\n",
     "\n",
-    "In first square of the chessboard there is one grain of rice, in the second square there is two grains, in the third square there is four grains and so on. How many grains are there in the whole chessboard when all squares are filled using this pattern?"
+    "In first square of the chessboard there is one grain of rice, in the second square there is two grains, in the third square there is four grains and so on. How many grains are there in the whole chessboard when all squares are filled using this pattern?\n",
+    "\n",
+    "$$s = \\sum_{i=0}^{63} 2^1 =2^0 + 2^1 + \\ldots + 2^{63}$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -492,8 +494,6 @@
     "squares = rows * columns\n",
     "rice = 1\n",
     "rice_total = 0\n",
-    "\n",
-    "squares\n",
     "\n",
     "for square in range(squares):\n",
     "    print(f\"{rice} at square {square+1}\")\n",
