--- a/Excercise/03-for-statements-excericse.ipynb
+++ b/Excercise/03-for-statements-excericse.ipynb
@@ -502,6 +502,38 @@
     "print(f\"The total amount of rice is:{rice_total}\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18446744073709551615\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_sum = 0\n",
+    "\n",
+    "\n",
+    "for i in range(64):\n",
+    "    my_sum += 2**i\n",
+    "print(f\"{my_sum}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rice_production = 755.5e9 #kg\n",
+    "# Hur många riskorn finns i ett kilogram?\n"
+   ]
   }
  ],
  "metadata": {
