--- a/Excercise/05-Strings-Excercises.ipynb
+++ b/Excercise/05-Strings-Excercises.ipynb
@@ -259,7 +259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " ## Encryption (**)\n",
+    " ## Encryption (**)    GÖR SENARE\n",
     "Let the user input a word and:\n",
     "\n",
     "  a)   encrypt the message by replacing each letter with the next letter. If the letter is in the end of the alphabet, use the first letter instead.\n",
@@ -269,6 +269,35 @@
     "  b)   decrypt the message\n",
     "\n",
     "  c)   let the user choose either encryption or decryption."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bokstäver[0]: a\n",
+      "[8]: h\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#user = input(\"Skriv in ett ord\")\n",
+    "bokstäver = \"abcdefghijklmnopqrstuvwxyzåäö\"\n",
+    "test_ord = \"hej\"\n",
+    "\n",
+    "print(f\"bokstäver[0]: {bokstäver[0]}\")\n",
+    "print(f\"[8]: {bokstäver[7]}\")\n",
+    "#str.find(sub,start,end)\n",
+    "index = bokstäver.find(test_ord[0],0,-1)\n",
+    "print(index)\n",
+    "\n",
+    "\n"
    ]
   }
  ],
