--- a/Code-Along/L9-Dictionary.ipynb
+++ b/Code-Along/L9-Dictionary.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,12 +92,15 @@
     "\n",
     "\n",
     "for key in words:\n",
-    "    print(key,\" - \" ,words[key])     # Loopar igenom nycklarna \n"
+    "    print(key,\" - \" ,words[key])     # Loopar igenom nycklarna \n",
+    "\n",
+    "\n",
+    "# alt enter = kör cellen och även nästa \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
