--- a/Code-Along/L9-Dictionary.ipynb
+++ b/Code-Along/L9-Dictionary.ipynb
@@ -95,7 +95,8 @@
     "    print(key,\" - \" ,words[key])     # Loopar igenom nycklarna \n",
     "\n",
     "\n",
-    "# alt enter = kör cellen och även nästa \n"
+    "# alt enter = kör cellen och även nästa \n",
+    "\n"
    ]
   },
   {
