--- a/Excercise/L9-Dictionary-Excercises.ipynb
+++ b/Excercise/L9-Dictionary-Excercises.ipynb
@@ -1,21 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a dict\n",
-    "person = dict(   #dict är keyword för att skapa ett dictionary\n",
-    "    name=\"Joel\",\n",
-    "    age=31,\n",
-    "    work=\"Ai teacher\",\n",
-    "    interests=[\"math\", \"yoga\", \"gardening\", \"programmering\", \"walking\"],\n",
-    ")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -25,21 +10,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'dict' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [87], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key, values \u001b[38;5;129;01min\u001b[39;00m courses\u001b[38;5;241m.\u001b[39mitems():   \n\u001b[0;32m     16\u001b[0m     total_points \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m values\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtotal_points\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     ]
+    }
+   ],
    "source": [
     "# Creating a dictonary\n",
-    "# F < 10, E: 10, D: 20, C: 30, B: 40, A: 50\n",
     "# python < 40, databehandling: < 25, linjär_algebra: < 20, databaser: < 25, maskininlärning: < 35, djupinlärning: < 40, statistik: < 30\n",
     "\n",
     "courses = dict(\n",
-    "    course = [\"python\", \"databehandling\", \"linjär_algebra\", \"databaser\", \"maskininlärning\", \"djupinlärning\", \"statistik\"]\n",
-    "    value = [ ]\n",
-    "    \n",
+    "    python = 40,\n",
+    "    databehandling = 25,\n",
+    "    linjär_algebra = 20,\n",
+    "    databaser = 25,\n",
+    "    maskininlärning = 35,\n",
+    "    djupinlärning = 40,\n",
+    "    statistiska_metoder = 30,\n",
+    ")\n",
     "\n",
-    "\n",
-    ")"
+    "total_points = 0    # Skapar denna eftersom vi vill få reda på totala poängen. \n",
+    "for key, values in courses.items():   \n",
+    "    total_points += values\n",
+    "print(total_points)"
    ]
   }
  ],
@@ -50,7 +53,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.13"
   },
   "orig_nbformat": 4,
