--- a/Excercise/L9-Dictionary-Excercises.ipynb
+++ b/Excercise/L9-Dictionary-Excercises.ipynb
@@ -10,18 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'dict' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [87], line 17\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m key, values \u001b[38;5;129;01min\u001b[39;00m courses\u001b[38;5;241m.\u001b[39mitems():   \n\u001b[0;32m     16\u001b[0m     total_points \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m values\n\u001b[1;32m---> 17\u001b[0m \u001b[38;5;28;43mprint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtotal_points\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'dict' object is not callable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antal poäng i kurserna du ska läsa är 215 poäng\n"
      ]
     }
    ],
@@ -42,7 +38,104 @@
     "total_points = 0    # Skapar denna eftersom vi vill få reda på totala poängen. \n",
     "for key, values in courses.items():   \n",
     "    total_points += values\n",
-    "print(total_points)"
+    "print(f\"Antal poäng i kurserna du ska läsa är {total_points} poäng\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Dice simulation (*)\n",
+    "Simulate 1000000 dice rolls and save the number of ones, twos, ..., sixes in a dictionary. Then print them out in the terminal. (*)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antal ggr 1 tärningen slagits 166778\n",
+      "Antal ggr 2 tärningen slagits 166228\n",
+      "Antal ggr 3 tärningen slagits 167000\n",
+      "Antal ggr 4 tärningen slagits 166557\n",
+      "Antal ggr 5 tärningen slagits 166119\n",
+      "Antal ggr 6 tärningen slagits 167318\n",
+      "6 Är det vanligaste resultatet för tärningen\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "# Skapar hur många ggr tärningen ska slås och hur många sidor tärningen har.\n",
+    "num_rolls = 1000000\n",
+    "dice_sides = 6\n",
+    "\n",
+    "# Skapar en tom dictionary för att spara resultaten av varje slag från tärningen\n",
+    "rolls = {}\n",
+    "\n",
+    "# For loop för att börja slå tärningen x antal ggr\n",
+    "for r in range(num_rolls):\n",
+    "    result = random.randint(1, dice_sides)\n",
+    "    if result in rolls:\n",
+    "        # Lägger till en i listan dictionaries\n",
+    "        rolls[result] += 1\n",
+    "    else:\n",
+    "        # Spara första resultat för detta nummer\n",
+    "        rolls[result] = 1\n",
+    "\n",
+    "# printa hur många ggr varje slag har blivit rullat\n",
+    "\n",
+    "for result in range(1,7):  #tärningen sidor därför rangen\n",
+    "    print(f\"Antal ggr\", str(result), \"tärningen slagits\", str(rolls[result]))\n",
+    "\n",
+    "## Vilket nummer som slagits mest av tärningen\n",
+    "print(str(max(rolls, key=rolls.get)), \"Är det vanligaste resultatet för tärningen\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1: 167061\n",
+      "2: 166764\n",
+      "3: 166770\n",
+      "4: 166261\n",
+      "5: 166556\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Coded with Rasmus\n",
+    "\n",
+    "import random as rnd\n",
+    "#Creates the dictionary with numbers as key and 0 as value\n",
+    "dice_guide = {\n",
+    "    \"one\": 0,\n",
+    "    \"two\": 0,\n",
+    "    \"three\" : 0,\n",
+    "    \"four\" : 0,\n",
+    "    \"five\" : 0,\n",
+    "    \"six\" : 0,\n",
+    "}\n",
+    "rolls = [rnd.randint(1,6) for _ in range(1000000)] #Rolls the \"dice\" and creates a list with every value\n",
+    "\n",
+    "for roll in rolls: #goes through the rolls list\n",
+    "    i = 0\n",
+    "    for dice, guide in dice_guide.items(): #goes through the dictionary and adds 1 to i\n",
+    "        i += 1\n",
+    "        if i == roll: #if i == the role\n",
+    "            dice_guide[dice] += 1 #adds one to the value in dice_guide\n",
+    "\n",
+    "print(dice_guide)"
    ]
   }
  ],
