--- a/Excercise/L9-Dictionary-Excercises.ipynb
+++ b/Excercise/L9-Dictionary-Excercises.ipynb
@@ -93,7 +93,16 @@
     "    print(f\"Antal ggr\", str(result), \"tärningen slagits\", str(rolls[result]))\n",
     "\n",
     "## Vilket nummer som slagits mest av tärningen\n",
+    "# max(iterable, *[, key, default])  Metoden get()returnerar objektets värde med den angivna nyckeln.\n",
     "print(str(max(rolls, key=rolls.get)), \"Är det vanligaste resultatet för tärningen\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Pokemon list (*)\n",
+    "Read in the file pokemon_list.txt in Python. Create a variable with name pokedex with the key:value \"pokemon\":\"type, index\". For example when searching for the keys \"Gengar\" and \"Pikachu\": (*)"
    ]
   }
  ],
