--- a/Labb-1/Labb-1-Label.ipynb
+++ b/Labb-1/Labb-1-Label.ipynb
@@ -1,8 +1,39 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Labb 1\n",
+    "\n",
+    "- Skapa en maskininlärningsalgoritm för att klassificera och labela om det är pichu eller pickachu baserat på längd och bredd\n",
+    "- Skicka in en matplotlib för att plotta datapunkterna (färlägga efter vilken pokemon det är i röd eller blå)\n",
+    "\n",
+    "## Strategi \n",
+    "- Vi vill skicka in datapoints texten och snygga till den. Den ska se ut liknande detta:\n",
+    "\n",
+    "Sample with (width, height): (25, 32) classified as Pikachu\n",
+    "\n",
+    "\n",
+    "Sample with (width, height): (24.2, 31.5) classified as Pikachu \n",
+    "\n",
+    "Sample with (width, height): (22, 34) classified as Pikachu\n",
+    "\n",
+    "Sample with (width, height): (20.5, 34) classified as Pichu\n",
+    "\n",
+    "\n",
+    "- Vi vill splitta vilka som har blivit labelade 1 eller 0 i varsina listor\n",
+    "\n",
+    "(\", 0\")\n",
+    "\n",
+    "(\", 1\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -171,15 +202,40 @@
     "with open(datapoints, \"r\") as f: \n",
     "    text = f.read()\n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "print(text)\n",
     "\n",
-    "\n"
+    "## Vi vill skapa variabler width, height, classified\n",
+    "\n",
+    "width =\n",
+    "height = \n",
+    "\n",
+    "\n",
+    "## Läst in filen\n",
+    "with open(\"../Data/quotes_clean.txt\", \"r\") as f_quotes, open(\"../Data/quotes_clean.txt\", \"a\") as f_append:\n",
+    "    # Läser in varje line som en lista\n",
+    "    # Strips away \"\\n\"\n",
+    "    quotes = [quote.strip(\"\\n\") for quote in f_quotes.readlines()] # GÖr att vi får en lista av olika.\n",
+    "    authors = [quote.split()[-2:] for quote in quotes]  #Splittar listan  # Vi plockar ut våra authors. De är i slutet av varje rad därav [-2:] \n",
+    "    # print(quotes.readlines())   #Man får varje rad i en lista. Och får man det så kan man läsa in med hjälp av list comprehension så man kan göra cleaning\n",
+    "    print(authors)\n",
+    "\n",
+    "    # Set = gives the unique elements\n",
+    "    authors = set([\" \".join(author) for author in authors])\n",
+    "    print(authors)\n",
+    "\n",
+    "    f_append.write(\"\\nAuthors: \")\n",
+    "    for author in authors:\n",
+    "        f_append.write(f\"{author}, \")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.13 ('PythonSchool-iXQr8Z-p')",
    "language": "python",
    "name": "python3"
   },
@@ -198,7 +254,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "958a9210e5eed5eb21a37baf529fded8d3cf9f5344114e9547bddde819fb25fe"
+    "hash": "ede0424b5117af074b0a15022a0db7920ce0c06d0370a7c1883de86effeccc15"
    }
   }
  },
