--- a/Labb-1/Labb-1-Label.ipynb
+++ b/Labb-1/Labb-1-Label.ipynb
@@ -229,7 +229,8 @@
     "\n",
     "    f_append.write(\"\\nAuthors: \")\n",
     "    for author in authors:\n",
-    "        f_append.write(f\"{author}, \")\n"
+    "        f_append.write(f\"{author}, \")\n",
+    "\n"
    ]
   }
  ],
