--- a/Labb-1/Labb-1-Label.ipynb
+++ b/Labb-1/Labb-1-Label.ipynb
@@ -196,6 +196,12 @@
     }
    ],
    "source": [
+    "## Importar olika verktyg vi kommer jobba med\n",
+    "\n",
+    "import matplotlib as plt\n",
+    "import math\n",
+    "import numpy as n\n",
+    "\n",
     "\n",
     "datapoints = \"../Data1/datapoints (3).txt\"\n",
     "\n",
