--- a/Labb-1/Labb-1-Label.ipynb
+++ b/Labb-1/Labb-1-Label.ipynb
@@ -198,26 +198,23 @@
    "source": [
     "## Importar olika verktyg vi kommer jobba med\n",
     "\n",
-    "import matplotlib as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "import numpy as n\n",
+    "import numpy as np\n",
     "\n",
-    "\n",
+    "# Imports data point file\n",
     "datapoints = \"../Data1/datapoints (3).txt\"\n",
-    "\n",
     "with open(datapoints, \"r\") as f: \n",
     "    text = f.read()\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "print(text)\n",
     "\n",
-    "## Vi vill skapa variabler width, height, classified\n",
+    "## Vi vill skapa variabler width, height, label för pokemon\n",
     "\n",
-    "width =\n",
-    "height = \n",
+    "pokemon_width =\n",
+    "pokemon_height = \n",
+    "pokemon_label = \n",
     "\n",
     "\n",
     "## Läst in filen\n",
