L8-File-Handling-Excercise

--- a/Excercise/L8-File-Handling.ipynb
+++ b/Excercise/L8-File-Handling.ipynb
@@ -23,54 +23,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data/Provresultat.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/Provresultat.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f_read:\n\u001b[0;32m      2\u001b[0m     \u001b[38;5;66;03m# each line is stored in a list\u001b[39;00m\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m# each line is a string it has \\n in the end\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     line \u001b[38;5;241m=\u001b[39m f_read\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m      6\u001b[0m     \u001b[38;5;66;03m# print(lines)\u001b[39;00m\n\u001b[0;32m      7\u001b[0m     \n\u001b[0;32m      8\u001b[0m \n\u001b[0;32m      9\u001b[0m     \u001b[38;5;66;03m# -------------a)------------------\u001b[39;00m\n\u001b[0;32m     10\u001b[0m     \u001b[38;5;66;03m# Loops through the lines and prints each line\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/Provresultat.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adam Gustafsson 25\n",
+      "Emil Johansson 23\n",
+      "Sven Erik Karlsson 13\n",
+      "Ove Karlsten 41\n",
+      "Emma Boden 32\n",
+      "Ida HÃ¥kansson 23\n",
+      "Ella Ester 41\n",
+      "Hanna Karlsson 23 \n",
+      "Johan Johansson 42\n",
+      "Sven Erik Lundin 39\n",
+      "BjÃ¶rn BjÃ¶rnsson 39\n",
+      "Karl Karlsson 32\n",
+      "Bose Bosseson 32\n",
+      "HÃ¥kan HÃ¥kanson 24\n",
+      "Jonas Jonasson 31\n",
+      "Erik Eriksson 31\n",
+      "Gore Bord 55\n",
+      "Jakob Kallander 65\n",
+      "Fredrika Ulven 10"
      ]
     }
    ],
    "source": [
+    "# a)\n",
     "\n",
-    "\n",
-    "\n",
-    "with open(\"data/Provresultat.txt\") as f_read:\n",
+    "with open(\"../Data/Provresultat.txt\") as f_read:\n",
     "    # each line is stored in a list\n",
-    "    # each line is a string it has \\n in the end\n",
-    "    line = f_read.readlines()\n",
+    "    # each line is a string and it has \\n in the end\n",
+    "    lines = f_read.readlines()\n",
+    "    #print(lines)\n",
     "\n",
-    "    # print(lines)\n",
-    "    \n",
-    "\n",
-    "    # -------------a)------------------\n",
-    "    # Loops through the lines and prints each line\n",
+    "    # -------------------a)-------------------\n",
+    "    # loops through the lines and prints each line\n",
     "    for line in lines:\n",
-    "        print(line, end = \"\")\n",
-    "\n"
+    "        print(line, end = \"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'data/Provresultat.txt'",
+     "ename": "IndentationError",
+     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 25)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [9], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# b) and c)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mdata/Provresultat.txt\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f_read, \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/Provresultat_tmp.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f_write:\n\u001b[0;32m      3\u001b[0m     lines \u001b[38;5;241m=\u001b[39m f_read\u001b[38;5;241m.\u001b[39mreadlines()\n\u001b[0;32m      4\u001b[0m     \u001b[38;5;28mprint\u001b[39m(lines[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m])\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'data/Provresultat.txt'"
+      "\u001b[1;36m  File \u001b[1;32m<tokenize>:25\u001b[1;36m\u001b[0m\n\u001b[1;33m    f_write.write(\"\\n\\nSorterat efter betyg\\n\\n\")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
      ]
     }
    ],
@@ -94,7 +101,57 @@
     "    print(lines_sorted_alphabetically)\n",
     "\n",
     "    for line in lines_sorted_alphabetically:\n",
-    "        f_write.write(line)"
+    "        f_write.write(line)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    f_write.write(\"\\n\\nSorterat efter betyg\\n\\n\")\n",
+    "\n",
+    "\n",
+    "     # --------------------------c)-----------------------\n",
+    "     # split to split and find the score for each line\n",
+    "     # put them in grade order\n",
+    "\n",
+    "    grades = list(\"ABCDEF\")[::-1]   # Reverse list\n",
+    "    print(grades)\n",
+    "    \n",
+    "    for grade, limit in zip(grades, range(20,71, 10)):\n",
+    "        for line in lines:\n",
+    "            #print(line.split())   #this gives a list for each line\n",
+    "            print(line.split()[-1])\n",
+    "\n",
+    "            point = int(line.split()[-1])   # type converts string to nit\n",
+    "            # if statements requires test between same types\n",
+    "            if limit <= point < limit + 10:\n",
+    "                f_write.write(f\"{line}\")      # type converts int to string, in order to write it to a txt file\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F 20\n",
+      "E 30\n",
+      "D 40\n",
+      "C 50\n",
+      "B 60\n",
+      "A 70\n"
+     ]
+    }
+   ],
+   "source": [
+    "grades = list(\"ABCDEF\")[::-1]   # Reverse list\n",
+    "\n",
+    "\n",
+    "for grade, limit in zip(grades, range(20,71, 10)):\n",
+    "    print(grade, limit)"
    ]
   }
  ],
