--- a/Excercise/L9-Dictionary-Excercises.ipynb
+++ b/Excercise/L9-Dictionary-Excercises.ipynb
@@ -107,24 +107,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../pokemon_list_excercise/pokemon_list.txt.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [10], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m path \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../pokemon_list_excercise/pokemon_list.txt.txt\u001b[39m\u001b[38;5;124m\"\u001b[39m     \u001b[38;5;66;03m## Man kan spara pathen som en variablel. absolut lättare än att spara efter open på raden nedanför\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mpath\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mas\u001b[39;00m f:   \u001b[38;5;66;03m# Öppnar filen\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     text \u001b[38;5;241m=\u001b[39m f\u001b[38;5;241m.\u001b[39mread()\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28mprint\u001b[39m(text)\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../pokemon_list_excercise/pokemon_list.txt.txt'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "print(pokedex[\"Gengar\"])\n",
+      "print(pokedex[\"Pikachu\"])\n",
+      "\n",
+      "SpÃ¶ke/Gift, 94\n",
+      "Elektrisk, 25\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "path = \"../pokemon_list_excercise/pokemon_list.txt.txt\"     ## Man kan spara pathen som en variablel. absolut lättare än att spara efter open på raden nedanför\n",
+    "#  ../ hoppar uppåt\n",
+    "path = \"pokemon_list_excercise/pokemon_list.txt\"     ## Man kan spara pathen som en variablel. absolut lättare än att spara efter open på raden nedanför\n",
     "\n",
     "with open(path, \"r\") as f:   # Öppnar filen\n",
     "    text = f.read()\n",
