--- a/Excercise/L8-File-Handling.ipynb
+++ b/Excercise/L8-File-Handling.ipynb
@@ -69,23 +69,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 25)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m<tokenize>:25\u001b[1;36m\u001b[0m\n\u001b[1;33m    f_write.write(\"\\n\\nSorterat efter betyg\\n\\n\")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unindent does not match any outer indentation level\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FEDCBA\n",
+      "25\n",
+      "23\n",
+      "13\n",
+      "41\n",
+      "32\n",
+      "23\n",
+      "41\n",
+      "23\n",
+      "42\n",
+      "39\n",
+      "39\n",
+      "32\n",
+      "32\n",
+      "24\n",
+      "31\n",
+      "31\n",
+      "55\n",
+      "65\n",
+      "10\n",
+      "25\n",
+      "23\n",
+      "13\n",
+      "41\n",
+      "32\n",
+      "23\n",
+      "41\n",
+      "23\n",
+      "42\n",
+      "39\n",
+      "39\n",
+      "32\n",
+      "32\n",
+      "24\n",
+      "31\n",
+      "31\n",
+      "55\n",
+      "65\n",
+      "10\n",
+      "25\n",
+      "23\n",
+      "13\n",
+      "41\n",
+      "32\n",
+      "23\n",
+      "41\n",
+      "23\n",
+      "42\n",
+      "39\n",
+      "39\n",
+      "32\n",
+      "32\n",
+      "24\n",
+      "31\n",
+      "31\n",
+      "55\n",
+      "65\n",
+      "10\n",
+      "25\n",
+      "23\n",
+      "13\n",
+      "41\n",
+      "32\n",
+      "23\n",
+      "41\n",
+      "23\n",
+      "42\n",
+      "39\n",
+      "39\n",
+      "32\n",
+      "32\n",
+      "24\n",
+      "31\n",
+      "31\n",
+      "55\n",
+      "65\n",
+      "10\n",
+      "25\n",
+      "23\n",
+      "13\n",
+      "41\n",
+      "32\n",
+      "23\n",
+      "41\n",
+      "23\n",
+      "42\n",
+      "39\n",
+      "39\n",
+      "32\n",
+      "32\n",
+      "24\n",
+      "31\n",
+      "31\n",
+      "55\n",
+      "65\n",
+      "10\n",
+      "25\n",
+      "23\n",
+      "13\n",
+      "41\n",
+      "32\n",
+      "23\n",
+      "41\n",
+      "23\n",
+      "42\n",
+      "39\n",
+      "39\n",
+      "32\n",
+      "32\n",
+      "24\n",
+      "31\n",
+      "31\n",
+      "55\n",
+      "65\n",
+      "10\n"
      ]
     }
    ],
    "source": [
     "# b) and c)\n",
-    "with open(\"data/Provresultat.txt\", \"r\") as f_read, open(\"data/Provresultat_tmp.txt\", \"w\") as f_write:\n",
+    "with open(\"../Data/Provresultat.txt\", \"r\") as f_read, open(\"../Data/Provresultat_tmp.txt\", \"w\") as f_write:\n",
     "    lines = f_read.readlines()\n",
-    "    print(lines[-1])\n",
+    "    #print(lines[-1])\n",
     "\n",
     "    lines[-1] += \"\\n\"\n",
     "    #print(lines)\n",
@@ -94,43 +207,99 @@
     "    #lines.sort()\n",
     "    #print(lines)\n",
     "\n",
-    "\n",
-    "    # --------------------------b)-----------------------\n",
+    "    # ----------------------------b)--------------------------\n",
     "    # returns a new list of sorted elements\n",
     "    lines_sorted_alphabetically = sorted(lines)\n",
-    "    print(lines_sorted_alphabetically)\n",
+    "    #print(lines_sorted_alphabetically)\n",
     "\n",
     "    for line in lines_sorted_alphabetically:\n",
     "        f_write.write(line)\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
     "    f_write.write(\"\\n\\nSorterat efter betyg\\n\\n\")\n",
     "\n",
+    "    # ----------------------------c)--------------------------\n",
+    "    # need to split and find the score for each line\n",
+    "    # put them in grade order\n",
     "\n",
-    "     # --------------------------c)-----------------------\n",
-    "     # split to split and find the score for each line\n",
-    "     # put them in grade order\n",
-    "\n",
-    "    grades = list(\"ABCDEF\")[::-1]   # Reverse list\n",
+    "    grades = \"ABCDEF\"[::-1]\n",
     "    print(grades)\n",
-    "    \n",
-    "    for grade, limit in zip(grades, range(20,71, 10)):\n",
+    "\n",
+    "    for grade, limit in zip(grades, range(20, 71, 10)):\n",
+    "\n",
+    "        f_write.write(f\"\\nBetyg {grade}\\n\")\n",
+    "\n",
     "        for line in lines:\n",
-    "            #print(line.split())   #this gives a list for each line\n",
+    "            #print(line.split()) # this gives a list for each line \n",
     "            print(line.split()[-1])\n",
     "\n",
-    "            point = int(line.split()[-1])   # type converts string to nit\n",
-    "            # if statements requires test between same types\n",
-    "            if limit <= point < limit + 10:\n",
-    "                f_write.write(f\"{line}\")      # type converts int to string, in order to write it to a txt file\n",
-    "        \n"
+    "            point = int(line.split()[-1]) # type converts string to int\n",
+    "            # if statement requires test between same types\n",
+    "            \n",
+    "            # handle F separately in order not to miss those lower than 10\n",
+    "\n",
+    "            if limit-10 <= point < limit:\n",
+    "                f_write.write(f\"{line}\") # type converts int to string, in order to write it to a txt file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FEDCBA\n"
+     ]
+    }
+   ],
+   "source": [
+    "# b) and c)\n",
+    "with open(\"../Data/Provresultat.txt\", \"r\") as f_read, open(\"../Data/Provresultat.txt\", \"a\") as f_write:\n",
+    "    lines = f_read.readlines()\n",
+    "\n",
+    "    lines[-1] += \"\\n\"\n",
+    "\n",
+    "    f_write.write(\"\\n\\nAlfabetisk ordning\\n\")\n",
+    "\n",
+    "    # ----------------------------b)--------------------------\n",
+    "    lines_sorted_alphabetically = sorted(lines)\n",
+    "\n",
+    "    for line in lines_sorted_alphabetically:\n",
+    "        f_write.write(line)\n",
+    "\n",
+    "\n",
+    "    f_write.write(\"\\n\\nSorterat efter betyg\\n\\n\")\n",
+    "\n",
+    "    # ----------------------------c)--------------------------\n",
+    "    # need to split and find the score for each line\n",
+    "    # put them in grade order\n",
+    "\n",
+    "    grades = \"ABCDEF\"[::-1]\n",
+    "    print(grades)\n",
+    "\n",
+    "    for grade, limit in zip(grades, range(20, 71, 10)):\n",
+    "\n",
+    "        f_write.write(f\"\\nBetyg {grade}\\n\")\n",
+    "\n",
+    "        for line in lines:\n",
+    "            #print(line.split()) # this gives a list for each line \n",
+    "            #print(line.split()[-1])\n",
+    "\n",
+    "            point = int(line.split()[-1]) # type converts string to int\n",
+    "            # if statement requires test between same types\n",
+    "            \n",
+    "            # handle F separately in order not to miss those lower than 10\n",
+    "\n",
+    "            if limit-10 <= point < limit:\n",
+    "                f_write.write(line) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -147,11 +316,30 @@
     }
    ],
    "source": [
-    "grades = list(\"ABCDEF\")[::-1]   # Reverse list\n",
-    "\n",
-    "\n",
-    "for grade, limit in zip(grades, range(20,71, 10)):\n",
+    "for grade, limit in zip(grades, range(20, 71, 10)):\n",
     "    print(grade, limit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10,2):\n",
+    "    print(i)"
    ]
   }
  ],
